tried fixing map spacing

--- a/community_garden/static/css/home.css
+++ b/community_garden/static/css/home.css
@@ -6,11 +6,12 @@
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
     width: min(100vw, 900px); /* Adjusted for responsiveness */
-    height: 50.25vh;
+    height: 33vw;
     text-align: center;
 }
 #map {
     margin: 0;
+    padding: 0;
     position: relative;
     width: 100%;
     height: 100%;
